--- a/cycl1prgm1 (1).html
+++ b/cycl1prgm1 (1).html
@@ -1,14 +1,14 @@
-<!--Tesmol shaji-->
-<!--rol no=056-->
+<!--Sandra saji-->
+<!--rollno=47-->
 <html>
 <head>
 <body>
-<h1 align="center">TESMOL SHAJI</h1>
-<h2 align="center">TESMOL SHAJI</h2>
-<h3 align="center">TESMOL SHAJI</h3>
-<h4 align="center">TESMOL SHAJI</h4>
-<h5 align="center">TESMOL SHAJI</h5>
-<h6 align="center">TESMOL SHAJI</h6>
+<h1 align="center">SANDRA SAJI</h1>
+<h2 align="center">SANDRA SAJI</h2>
+<h3 align="center">SANDRA SAJI</h3>
+<h4 align="center">SANDRA SAJI</h4>
+<h5 align="center">SANDRA SAJI</h5>
+<h6 align="center">SANDRA SAJI</h6>
 <head>
 </body>
 </html>
